--- a/src/main/resources/delegators/delegators.properties
+++ b/src/main/resources/delegators/delegators.properties
@@ -1,1 +1,1 @@
-urlkey=uk.co.agilesphere.wrapped.service.ServiceProperties,pingPayload,String
+urlkey=uk.co.agilesphere.dummyservice.service.Service,ping,String
