OHA-159 Calls extended range of Service methods to test different signatures and return types

--- a/src/main/resources/delegators/delegators.properties
+++ b/src/main/resources/delegators/delegators.properties
@@ -1,1 +1,8 @@
-urlkey=uk.co.agilesphere.dummyservice.service.Service,ping,String
+service-x=uk.co.agilesphere.dummyservice.service.Service,pingVoid,String
+service-a=uk.co.agilesphere.dummyservice.service.Service,pingAsString,String
+service-b=uk.co.agilesphere.dummyservice.service.Service,pingOneParamAsString,String,param1
+service-c=uk.co.agilesphere.dummyservice.service.Service,pingTwoParamAsString,String,param1,param2
+service-d=uk.co.agilesphere.dummyservice.service.Service,pingThreeParamAsString,String,param1,param2,param3
+service-e=uk.co.agilesphere.dummyservice.service.Service,pingThreeParamAsArray,Array,param1,param2,param3
+service-f=uk.co.agilesphere.dummyservice.service.Service,pingThreeParamAsList,List,param1,param2,param3
+service-g=uk.co.agilesphere.dummyservice.service.Service,pingThreeParamAsMap,Map,param1,param2,param3
