--- a/pom.xml
+++ b/pom.xml
@@ -29,19 +29,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>uk.co.agilesphere.dummyservice</groupId>
-			<artifactId>dummy-service</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<!--scope>system</scope-->
-			<!--systemPath>/Users/william/Applications/OverseasHealthcare/wrappedservice/target/wrappedservice-0.0.1-SNAPSHOT.jar</systemPath-->
 		</dependency>
 	</dependencies>
 
